# hs-zstd

./: .gitignore  CONTRIBUTING.md  README.md  zstd.cabal
Codec/Compression/: Zstd.hs
Codec/Compression/Zstd/: Base.hs  Efficient.hs  FFI.hs  Internal.hs  Lazy.hs  Streaming.hs  Types.hs
Codec/Compression/Zstd/Base/: Types.hs
Codec/Compression/Zstd/FFI/: Types.hsc
benchmarks/: Benchmarks.hs
examples/: zstd-examples.cabal
examples/low-level/: DictionaryCompression.hs
tests/: Main.hs  Properties.hs  QuickCheckUtils.hs
